<resources>
    <string name="app_name">Tarefas e Eventos</string>
    <string name="create_new_task">Criar</string>
    <string name="create_new_task_content_description">Botão para criar nova tarefa ou evento</string>
    <string name="tasks_app_header">Tarefas e Eventos:</string>
    <string name="new_task">Nova/o tarefa ou evento</string>
    <string name="back">Voltar</string>
    <string name="title">Título</string>
    <string name="task_description">Descrição</string>
    <string name="date">Data</string>
    <string name="hour">Hora</string>
    <string name="confirm">Confirmar</string>
    <string name="task_title_placeholder">Task Title Placeholder</string>
    <string name="task_description_placeholder">Task Description Placeholder</string>
    <string name="task_card_date_placeholder">00/00/20XX</string>
    <string name="task_card_hour_placeholder">00:00</string>
    <string name="save_task_error_msg">Falha ao salvar a tarefa/evento</string>
    <string name="edit_task_label">Editar</string>
    <string name="delete_task">Excluir</string>
    <string name="confirm_delete_title">Excluir?</string>
    <string name="confirm_delete_message">Tem certeza que deseja apagar esta/e tarefa/evento?</string>
    <string name="string_yes">Sim</string>
    <string name="string_no">Não</string>
</resources>