<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_primary"
        app:titleTextColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:navigationIcon="@drawable/ic_nav_back_24"
        app:navigationContentDescription="@string/back"
        app:title="@string/edit_task_label"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_title"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:counterEnabled="true"
        app:counterMaxLength="50"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLength="50"
            />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_description"
        app:layout_constraintTop_toBottomOf="@id/til_title"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/task_description"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:counterEnabled="true"
        app:counterMaxLength="120"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_description"
            android:inputType="textMultiLine"
            android:lines="3"
            android:gravity="top|start"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLength="120"
            />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_date"
        app:layout_constraintTop_toBottomOf="@id/til_description"
        app:layout_constraintStart_toStartOf="@id/til_description"
        app:layout_constraintEnd_toStartOf="@id/til_time"
        android:paddingStart = "16dp"
        android:paddingEnd="8dp"
        android:paddingVertical="16dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/date"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:startIconDrawable="@drawable/ic_calendar_24"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_date"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="false"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_time"
        app:layout_constraintTop_toTopOf="@id/til_date"
        app:layout_constraintStart_toEndOf="@id/til_date"
        app:layout_constraintEnd_toEndOf="@id/til_description"
        android:paddingStart = "8dp"
        android:paddingEnd="16dp"
        android:paddingVertical="16dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hour"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:startIconDrawable="@drawable/ic_time_24"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_time"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="false"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/efb_confirm_edit_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        app:layout_constraintBottom_toTopOf="@id/efb_confirm_delete_task"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/create_new_task_content_description"
        android:text="@string/confirm"
        app:icon="@drawable/ic_confirm_24"/>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/efb_confirm_delete_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/create_new_task_content_description"
        android:text="@string/delete_task"
        android:backgroundTint="@color/red"
        app:icon="@drawable/ic_delete"/>

</androidx.constraintlayout.widget.ConstraintLayout>