<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/task_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardElevation="8dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            >

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/more_iv"
                android:layout_width="36dp"
                android:layout_height="36dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                app:srcCompat="@drawable/ic_more_24"

                />

            <TextView
                android:id="@+id/task_card_title"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/more_iv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/task_title_placeholder"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_margin="8dp"
                />

            <TextView
                android:id="@+id/task_card_description"
                app:layout_constraintTop_toBottomOf="@id/task_card_title"
                app:layout_constraintStart_toStartOf="@id/task_card_title"
                app:layout_constraintEnd_toStartOf="@id/more_iv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/task_description_placeholder"
                android:textSize="18sp"
                android:layout_marginTop="8dp"
                />

            <TextView
                android:id="@+id/task_card_date_label"
                app:layout_constraintStart_toStartOf="@id/task_card_description"
                app:layout_constraintTop_toBottomOf="@id/task_card_description"
                app:layout_constraintEnd_toStartOf="@id/task_card_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/date"
                android:textSize="18sp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                />

            <TextView
                android:id="@+id/task_card_date"
                app:layout_constraintStart_toEndOf="@id/task_card_date_label"
                app:layout_constraintTop_toBottomOf="@id/task_card_description"
                app:layout_constraintEnd_toStartOf="@id/task_card_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/task_card_date_placeholder"
                android:layout_marginTop="8dp"
                />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/task_card_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5"
                />

            <TextView
                android:id="@+id/task_card_time_label"
                app:layout_constraintStart_toEndOf="@id/task_card_guideline"
                app:layout_constraintTop_toBottomOf="@id/task_card_description"
                app:layout_constraintEnd_toStartOf="@id/task_card_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/hour"
                android:textSize="18sp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                />

            <TextView
                android:id="@+id/task_card_time"
                app:layout_constraintStart_toEndOf="@id/task_card_time_label"
                app:layout_constraintTop_toBottomOf="@id/task_card_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/task_card_hour_placeholder"
                android:textSize="18sp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>